refactor: move mapping in TraineeController to TraineeMapper and service layer